--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2,5 +2,116 @@
   "login": "Login",
   "s_id": "Student ID",
   "password": "Password",
-  "hello": "Hello"
+  "hello": "Hello",
+  "change": "Change",
+  "recent_report": "Recent Reports",
+  "view_all": "View All",
+  "view_result": "View Result",
+  "school_corner": "School Corner",
+  "playbook": "Playbook",
+  "post_lesson_doubt": "Post lesson Doubt",
+  "community": "Community",
+  "interact_engage": "Interact Engage and Share",
+  "open_community": "Open community",
+  "my_expansion_tile": "My expansion tile",
+  "see_video": "See Video",
+  "something_went_wrong": "Something went wrong",
+  "notifications_setting" : "Notifications setting",
+  "in_this_section": "In this section, you will be able to manage notifications. We will continue to  send you notifications for security reasons",
+  "in_app_notifications": "In App Notifications",
+  "inside_application_notifications": "You will receive a notification inside the application.",
+  "update_application": "Update Application",
+  "update_application_notifications": "You will receive a notification about update application.",
+
+  "parents_community": "parents-community",
+  "my_post": "My Post",
+  "parents_my_post": "parents-my-post",
+  "create_post": "Create Post",
+  "parents_create_post": "parents-create-post",
+  "community_rules": "Community Rules",
+  "ok_got_it": "OK, GOT IT.",
+  "likes": "likes",
+  "delete": "Delete",
+  "are_you_sure_to_delete_this_post_from_community": "Are you sure to delete this post from community?",
+  "thank_you_for_sharing_your_thoughts": "Thank you for sharing your thoughts.",
+  "ok": "OK",
+  "select_files_to_upload": "Select files to upload",
+  "type_caption": "Type Caption...",
+  "dashboard": "Dashboard",
+  "activities": "Activities",
+  "recommendations": "Recommendations",
+  "teacher_name": "Teacher Name :",
+  "lesson_plan": "Lesson Plan",
+  "medium": "MEDIUM",
+  "teaching_pace": "Teaching Pace",
+  "good": "GOOD",
+  "sub_topics": "SUB-TOPICS",
+  "all_subjects": "All Subjects",
+  "chapters": "Chapters",
+  "english": "English",
+  "hindi": "Hindi",
+  "marathi": "Marathi",
+  "error_loading_user": "Error Loading User",
+  "no_survey": "No Survey",
+  "your_next_quest_awaits": "Your next quest awaits!",
+  "see_you_on": "See you on : ",
+  "start_now": "Start Now",
+  "notification": "Notification",
+  "effort_level": "Effort level:",
+  "developmental_stage": "Developmental stage:",
+  "focus_area": "Focus area",
+  "activity_toolkit": "Activity Toolkit",
+  "included_material": "Included Material:",
+  "goals": "Goals",
+  "action": "Action",
+  "playbook_screen": "Playbook Screen",
+  "search_strategy": "Search strategy",
+  "all": "All",
+  "no_playbook_found": "No Playbook found",
+  "profile_details": "Profile Details",
+  "logout": "Logout!",
+  "are_you_sure": "Are you sure?",
+  "no": "No",
+  "yes": "Yes",
+  "change_image": "CHANGE IMAGE",
+  "first_name": "First Name",
+  "enter_name": "Enter Name",
+  "last_name": "Last Name",
+  "email": "Email",
+  "change_password_capital": "CHANGE PASSWORD",
+  "save_change": "SAVE CHANGE",
+  "update_profile_image": "Update profile image",
+  "select_files_to_upload": "Select files to upload",
+  "update_image": "UPDATE IMAGE",
+  "change_password_small": "Change password",
+  "current_password": "Current Password",
+  "password": "Password",
+  "new_password": "New Password",
+  "confirm_password": "Confirm Password",
+  "password_must_contain": "Password must contain:",
+  "min_characters": "Min 6 characters",
+  "at_least_one_special_characters": "At least 1 special characters",
+  "at_least_one_number": "At least 1 number",
+  "save_password": "SAVE PASSWORD",
+  "reports": "Reports",
+  "list_of_available_dashboards": "List of available dashboards",
+  "submitting_answers": "Submitting Answers",
+  "back": "Back",
+  "please_select_an_answer": "Please Select an Answer",
+  "submit": "Submit",
+  "next": "Next",
+  "question": "QUESTION",
+  "of_text": "OF",
+  "thank_you": "Thank You!",
+  "your_valuable_feedback_will_help_us": "Your valuable feedback will help us improve.",
+  "go_to_home": "GO TO HOME",
+  "survey_purpose": "Survey Purpose",
+  "continue_text": "CONTINUE",
+  "question_description": "Question Description",
+  "close_description": "CLOSE DESCRIPTION",
+  "share": "Share",
+  "cancel": "Cancel",
+  "open": "OPEN"
+
+
 }
