--- a/lib/l10n/app_mr.arb
+++ b/lib/l10n/app_mr.arb
@@ -2,5 +2,115 @@
   "login": "लॉगिन करां",
   "s_id": "विद्यार्थी ओळखपत्र",
   "password": "पासवर्ड",
-  "hello": "नमस्कार"
+  "hello": "नमस्कार",
+  "change": "बदला",
+  "recent_report": "अलीकडील अहवाल",
+  "view_all": "सर्व पहा",
+  "view_result": "परिणाम पहा",
+  "school_corner": "शाळेचा कोपरा",
+  "playbook": "प्लेबुक",
+  "community": "समुदाय",
+  "interact_engage": "संवाद साधा आणि सामायिक करा",
+  "open_community": "मुक्त समुदाय",
+  "my_expansion_tile": "माझे विस्तार टाइल",
+  "see_video": "See Video",
+  "something_went_wrong": "काहीतरी चूक झाली",
+
+  "notifications_setting" : "सूचना सेटिंग्ज",
+  "in_this_section": "या विभागात, तुम्ही सूचना व्यवस्थापित करण्यास सक्षम असाल. सुरक्षेच्या कारणास्तव आम्ही तुम्हाला सूचना पाठवत राहू",
+  "in_app_notifications": "अॅप सूचनांमध्ये",
+  "inside_application": "तुम्हाला अर्जामध्ये एक सूचना प्राप्त होईल.",
+  "update_application": "अनुप्रयोग अद्यतनित करा",
+  "update_application_notifications": "तुम्हाला अपडेट अॅप्लिकेशनबद्दल सूचना प्राप्त होईल.",
+
+  "parents_community": "पालक-समुदाय",
+  "my_post": "माझी पोस्ट",
+  "parents_my_post": "पालक-माझे-पोस्ट",
+  "create_post": "पोस्ट तयार करा",
+  "parents_create_post": "पालक-तयार-पोस्ट",
+  "community_rules": "समुदायाचे नियम",
+  "ok_got_it": "ठीक आहे, समजले.",
+  "likes": "आवडी",
+  "delete": "हटवा",
+  "are_you_sure_to_delete_this_post_from_community": "तुम्‍हाला समुदायातून हे पोस्‍ट हटवण्‍याची खात्री आहे का?",
+  "thank_you_for_sharing_your_thoughts": "तुमचे विचार मांडल्याबद्दल धन्यवाद.",
+  "ok": "ठीक आहे",
+  "select_files_to_upload": "अपलोड करण्यासाठी फायली निवडा",
+  "type_caption": "मथळा टाइप करा...",
+  "dashboard": "डॅशबोर्ड",
+  "activities": "उपक्रम",
+  "recommendations": "शिफारशी",
+  "teacher_name": "शिक्षकाचे नाव:",
+  "lesson_plan": "पाठ योजना",
+  "medium": "मध्यम",
+  "teaching_pace": "शिकवण्याची गती",
+  "good": "चांगले",
+  "sub_topics": "उप-विषय",
+  "all_subjects": "सर्व विषय",
+  "chapters": "अध्याय",
+  "english": "इंग्रजी",
+  "hindi": "हिंदी",
+  "marathi": "मराठी",
+  "error_loading_user": "वापरकर्ता लोड करताना त्रुटी",
+  "no_survey": "नाही सर्वेक्षण",
+  "your_next_quest_awaits": "तुमचा पुढील शोध प्रतीक्षेत आहे!",
+  "see_you_on": "यावर भेटू:",
+  "start_now": "आता सुरू करा",
+  "notification": "सूचना",
+  "effort_level": "प्रयत्न पातळी:",
+  "developmental_stage": "विकासाचा टप्पा:",
+  "focus_area": "फोकस क्षेत्र",
+  "activity_toolkit": "क्रियाकलाप टूलकिट",
+  "included_material": "समाविष्ट साहित्य:",
+  "goals": "गोल",
+  "action": "कृतीकृती",
+  "playbook_screen": "प्लेबुक स्क्रीन",
+  "search_strategy": "शोध धोरण",
+  "all": "सर्व",
+  "no_playbook_found": "कोणतेही प्लेबुक आढळले नाही",
+  "profile_details": "प्रोफाइल तपशील",
+  "logout": "बाहेर पडणे!",
+  "are_you_sure": "तुला खात्री आहे?",
+  "no": "नाही",
+  "yes": "होय",
+  "change_image": "प्रतिमा बदला",
+  "first_name": "पहिले नाव",
+  "enter_name": "नाव प्रविष्ट करा",
+  "last_name": "आडनाव",
+  "email": "ईमेल",
+  "change_password_capital": "पासवर्ड बदला",
+  "save_change": "बदल जतन करा",
+  "update_profile_image": "प्रोफाइल इमेज अपडेट करा",
+  "select_files_to_upload": "अपलोड करण्यासाठी फायली निवडा",
+  "update_image": "प्रतिमा अद्यतनित करा",
+  "change_password_small": "पासवर्ड बदला",
+  "current_password": "सध्याचा गुप्त शब्द",
+  "password": "पासवर्ड",
+  "new_password": "नवीन पासवर्ड",
+  "confirm_password": "पासवर्डची पुष्टी करा",
+  "password_must_contain": "पासवर्डमध्ये हे असणे आवश्यक आहे:",
+  "min_characters": "किमान ६ वर्ण",
+  "at_least_one_special_characters": "किमान 1 विशेष वर्ण",
+  "at_least_one_number": "किमान 1 संख्या",
+  "save_password": "पासवर्ड जतन करा",
+  "reports": "अहवाल",
+  "list_of_available_dashboards": "उपलब्ध डॅशबोर्डची सूची",
+  "submitting_answers": "उत्तरे सादर करत आहे",
+  "back": "मागे",
+  "please_select_an_answer": "कृपया उत्तर निवडा",
+  "submit": "प्रस्तुत करणे",
+  "next": "पुढे",
+  "question": "प्रश्न",
+  "of_text": "ऑफ",
+  "thank_you": "धन्यवाद!",
+  "your_valuable_feedback_will_help_us": "तुमचा मौल्यवान अभिप्राय आम्हाला सुधारण्यात मदत करेल.",
+  "go_to_home": "घरी जा",
+  "survey_purpose": "सर्वेक्षण उद्देश",
+  "continue_text": "सुरू",
+  "question_description": "प्रश्न वर्णन",
+  "close_description": "वर्णन बंद करा",
+  "share": "शेअर करा",
+  "cancel": "रद्द करा",
+  "open": "उघडा",
+  "post_lesson_doubt": "धडा नंतर शंका"
 }
