--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -2,5 +2,115 @@
   "login": "लॉग इन करें",
   "s_id": "स्टूडेंट आईडी",
   "password": "पासवर्ड",
-  "hello": "नमस्ते"
+  "hello": "नमस्ते",
+  "change": "परिवर्तन",
+  "recent_report": "हालिया रिपोर्ट",
+  "view_all": "सभी को देखें",
+  "view_result": "परिणाम देख",
+  "school_corner": "स्कूल का कोना",
+  "playbook": "प्लेबुक",
+  "community": "समुदाय",
+  "interact_engage": "बातचीत करें, संलग्न रहें और साझा करें",
+  "open_community": "खुला समुदाय",
+  "my_expansion_tile": "मेरी विस्तार टाइल",
+  "see_video": "See Video",
+  "something_went_wrong": "कुछ गलत हो गया",
+
+  "notifications_setting" : "सूचना सेटिंग",
+  "in_this_section": "इस सेक्शन में आप नोटिफिकेशन को मैनेज कर पाएंगे. सुरक्षा कारणों से हम आपको सूचनाएं भेजना जारी रखेंगे",
+  "in_app_notifications": "ऐप नोटिफिकेशन में",
+  "inside_application": "आपको एप्लिकेशन के अंदर एक अधिसूचना प्राप्त होगी।",
+  "update_application": "एप्लिकेशन अपडेट करें",
+  "update_application_notifications": "आपको अद्यतन आवेदन के बारे में एक सूचना प्राप्त होगी।",
+
+  "parents_community": "माता-पिता-समुदाय",
+  "my_post": "मेरी पद",
+  "parents_my_post": "माता-पिता-मेरी-पोस्ट",
+  "create_post": "पोस्ट बनाएं",
+  "parents_create_post": "माता-पिता-पोस्ट बनाएँ",
+  "community_rules": "सामुदायिक नियम",
+  "ok_got_it": "ठीक मिल गया।",
+  "likes": "पसंद है",
+  "delete": "मिटाना",
+  "are_you_sure_to_delete_this_post_from_community": "क्या आप वाकई इस पोस्ट को समुदाय से हटाना चाहते हैं?",
+  "thank_you_for_sharing_your_thoughts": "अपने विचारों को बांटने के लिए धन्यवाद।",
+  "ok": "ठीक है",
+  "select_files_to_upload": "अपलोड करने के लिए फ़ाइलें चुनें",
+  "type_caption": "कैप्शन टाइप करें...",
+  "dashboard": "डैशबोर्ड",
+  "activities": "गतिविधियाँ",
+  "recommendations": "सिफारिशों",
+  "teacher_name": "शिक्षक का नाम :",
+  "lesson_plan": "शिक्षण योजना",
+  "medium": "मध्यम",
+  "teaching_pace": "शिक्षण गति",
+  "good": "अच्छा",
+  "sub_topics": "उप-विषयों",
+  "all_subjects": "सभी विषयों",
+  "chapters": "अध्याय",
+  "english": "अंग्रेज़ी",
+  "hindi": "हिंदी",
+  "marathi": "मराठी",
+  "error_loading_user": "उपयोगकर्ता लोड करने में त्रुटि",
+  "no_survey": "कोई सर्वेक्षण नही",
+  "your_next_quest_awaits": "आपकी अगली खोज इंतज़ार कर रही है!",
+  "see_you_on": "फिर मिलेंगे :",
+  "start_now": "शुरू करें",
+  "notification": "अधिसूचना",
+  "effort_level": "प्रयास स्तर:",
+  "developmental_stage": "विकासात्मक चरण:",
+  "focus_area": "ध्यानाकर्षण क्षेत्र",
+  "activity_toolkit": "गतिविधि टूलकिट",
+  "included_material": "शामिल सामग्री:",
+  "goals": "लक्ष्य",
+  "action": "कार्रवाई",
+  "playbook_screen": "प्लेबुक स्क्रीन",
+  "search_strategy": "कार्यनीति खोजें",
+  "all": "सभी",
+  "no_playbook_found": "कोई प्लेबुक नहीं मिली",
+  "profile_details": "प्रोफ़ाइल विवरण",
+  "logout": "लॉग आउट!",
+  "are_you_sure": "क्या आपको यकीन है?",
+  "no": "नहीं",
+  "yes": "हाँ",
+  "change_image": "चित्र को बदलें",
+  "first_name": "पहला नाम",
+  "enter_name": "नाम दर्ज करें",
+  "last_name": "उपनाम",
+  "email": "ईमेल",
+  "change_password_capital": "पासवर्ड बदलें",
+  "save_change": "परिवर्तन को संग्रहित करें",
+  "update_profile_image": "प्रोफ़ाइल छवि अपडेट करें",
+  "select_files_to_upload": "अपलोड करने के लिए फ़ाइलें चुनें",
+  "update_image": "छवि अद्यतन करें",
+  "change_password_small": "पासवर्ड बदलें",
+  "current_password": "वर्तमान पासवर्ड",
+  "password": "पासवर्ड",
+  "new_password": "नया पासवर्ड",
+  "confirm_password": "पासवर्ड की पुष्टि कीजिये",
+  "password_must_contain": "पासवर्ड में अवश्य होना चाहिए:",
+  "min_characters": "कमसकम 6 अक्षर",
+  "at_least_one_special_characters": "कम से कम 1 विशेष वर्ण",
+  "at_least_one_number": "कम से कम 1 नंबर",
+  "save_password": "पासवर्ड को बचाओ",
+  "reports": "रिपोर्टों",
+  "list_of_available_dashboards": "उपलब्ध डैशबोर्ड की सूची",
+  "submitting_answers": "उत्तर प्रस्तुत करना",
+  "back": "Back",
+  "please_select_an_answer": "कृपया एक उत्तर चुनें",
+  "submit": "जमा करना",
+  "next": "अगला",
+  "question": "सवाल",
+  "of_text": "का",
+  "thank_you": "धन्यवाद!",
+  "your_valuable_feedback_will_help_us": "आपकी बहुमूल्य प्रतिक्रिया हमें बेहतर बनाने में मदद करेगी।",
+  "go_to_home": "घर जाओ",
+  "survey_purpose": "सर्वेक्षण उद्देश्य",
+  "continue_text": "जारी रखना",
+  "question_description": "प्रश्न विवरण",
+  "close_description": "करीबी विवरण",
+  "share": "शेयर करना",
+  "cancel": "रद्द करना",
+  "open": "खुला",
+  "post_lesson_doubt": "पोस्ट पाठ संदेह"
 }
