peer survey done

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -111,7 +111,7 @@
   "close_description": "CLOSE DESCRIPTION",
   "share": "Share",
   "cancel": "Cancel",
-  "open": "OPEN"
+  "open": "OPEN",
 
  "student_id": "Student ID",
   "please_provide_id": "Please provide ID",
