--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -112,7 +112,7 @@
   "share": "शेयर करना",
   "cancel": "रद्द करना",
   "open": "खुला",
-  "post_lesson_doubt": "पोस्ट पाठ संदेह"
+  "post_lesson_doubt": "पोस्ट पाठ संदेह",
 
   "student_id": "स्टूडेंट आईडी",
   "please_provide_id": "कृपया आईडी प्रदान करें",
@@ -121,7 +121,7 @@
   "class_survey": "वर्ग सर्वेक्षण",
   "unknown_subject": "अज्ञात विषय",
   "your_thoughts": "आपके विचार और प्रतिक्रिया अत्यंत मूल्यवान हैं",
-  "survey_purpose": "सर्वेक्षण उद्देश्य: "
+  "survey_purpose": "सर्वेक्षण उद्देश्य: ",
   "take_a_moment": "प्रतिक्रिया देने से पहले पाठ के बारे में सोचने के लिए कुछ समय निकालें।",
   "answer_truthfully": "पाठ की अपनी समझ के आधार पर सच्चाई से उत्तर दें।",
   "if_there_something": "यदि कोई ऐसी बात है जो आपको समझ में नहीं आई है, तो उसका उल्लेख करने में संकोच न करें।",
