--- a/lib/l10n/app_mr.arb
+++ b/lib/l10n/app_mr.arb
@@ -112,7 +112,7 @@
   "share": "शेअर करा",
   "cancel": "रद्द करा",
   "open": "उघडा",
-  "post_lesson_doubt": "धडा नंतर शंका"
+  "post_lesson_doubt": "धडा नंतर शंका",
 
   "student_id": "विद्यार्थी ओळखपत्र",
   "please_provide_id": "कृपया आयडी द्या",
