Added Language Translate

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -127,6 +127,105 @@
   "failed_to_previous": "Failed to Previous Answers",
   "good_job": "GOOD JOB!",
   "happy_learning" : "Happy Learning",
-  "resources_for_this": "Resources for this lesson has unlocked."
+  "resources_for_this": "Resources for this lesson has unlocked.",
+
+  "ok": "OK",
+  "total_xp_available": "Total XP available",
+  "subjects": "Subjects",
+  "notifications": "Notifications",
+  "frequently_asked_questions": "Frequently Asked Questions",
+  "no_students_found": "No Students Found",
+  "these_scores_are_not_academic_rankings": "These scores are not academic rankings",
+  "points": "points",
+  "error_loading_leader_board": "Error loading leader board",
+  "name": "Name",
+  "choose_an_avatar": "Choose an Avatar",
+  "free_avatars": "Free Avatars",
+  "redeem_avatars": "Redeem Avatars",
+  "free": "free",
+  "paid": "paid",
+  "avatars_available": "avatars available",
+  "not_enough_balance": "Not Enough balance",
+  "are_you_sure_you_want_to_spend": "Are you sure you want to spend ",
+  "xp_to_unlock_this_avatar": "xp to unlock this avatar?",
+  "error_load_failed": "Error: Load failed",
+  "apply": "APPLY",
+  "edit_profile": "Edit Profile",
+  "change_avatar": "CHANGE AVATAR",
+  "gender": "Gender",
+  "male": "Male",
+  "female": "Female",
+  "update_password": "UPDATE PASSWORD",
+  "profile": "Profile",
+  "earned_xp": "EARNED XP ",
+  "clarified_stats": "ClarifiED Stats",
+  "total_spent_xp": "TOTAL SPENT XP",
+  "quiz_attemped": "QUIZ ATTEMPED",
+  "error_loading_profile": "Error Loading Profile",
+  "unknown_teacher": "Unknown Teacher",
+  "confirmation": "Confirmation",
+  "cancel_capital": "CANCEL",
+  "yes_unlock": "YES, UNLOCK",
+  "case_study": "case-study",
+  "case_study_second": "Case Study",
+  "recent_topics": "Recent Topics",
+  "no_topics_completed_yet": "No Topics Completed Yet",
+  "xp": "XP",
+  "quick_feedback": "Quick Feedback",
+  "select_difficulty_level": "Select Difficulty Level",
+  "easy": "Easy",
+  "medium": "Medium",
+  "hard": "Hard",
+  "complete_and_get": "Complete and get ",
+  "quiz_goals": "Quiz Goals :",
+  "we_value_your_input": "We value your input and strive to enhance your learning experience. The purpose of this survey is to gather Quiz on the recently completed lesson. Your responses will help us understand.",
+  "study_material": "Study Material",
+  "videos": "Videos",
+  "ncert_solutions": "NCERT Solutions",
+  "revision": "Revision",
+  "templates": "Templates",
+  "more_content_coming_soon": "More content coming soon",
+  "go_back": "GO BACK",
+  "not_loaded": "Not Loaded",
+  "teacher_name": "Teacher Name: ",
+  "lesson_plan": "Lesson Plan",
+  "xp_to_unlock_this": "XP to unlock this",
+  "start_quiz": "Start Quiz",
+  "use": "Use",
+  "recently_completed_topics": "Recently Completed Topics",
+  "there_are_no_new_topics_available": "There are no new topics available",
+  "there_was_an_error": "There was an error",
+  "no_available_subjects": "No Available Subjects",
+  "error_loading": "Error: loading",
+  "see_description": "SEE DESCRIPTION",
+  "congratulation": "Congratulation!",
+  "you_earned": "You earned ",
+  "theres_no_time_limit_respond_at_your_own_pace": "There's no time limit, respond at your own pace!",
+  "select_your_option": "Select your option:",
+  "page_not_found": "Page Not Found",
+  "loading": "LOADING",
+  "already_completed": "ALREADY COMPLETED",
+  "start_survey": "START SURVEY",
+  "your_section": "Your Section",
+  "section": "section",
+  "section_all": "section-all",
+  "all_section": "All Section",
+  "you_capital": "YOU",
+  "already_submitted": "Already Submitted",
+  "playing_quiz": "Playing Quiz",
+  "total_question": "Total Question: ",
+  "answered": "Answered: ",
+  "remaining": "Remaining: ",
+  "question": "Question: ",
+  "correct_Answer": "Correct Answer :",
+  "explanation": "Explanation : ",
+  "lesson_quiz_complete": "Lesson Quiz Complete!",
+  "you_are_doing_great": "You are doing great.",
+  "time": "TIME",
+  "perfect": "PERFECT",
+  "locked": "Locked",
+  "unlocked": "Unlocked",
+  "unknown": "Unknown"
+
 
 }
