--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -128,5 +128,103 @@
   "failed_to_previous": "पिछले उत्तरों में विफल",
   "good_job": "अच्छा काम!",
   "happy_learning" : "हैप्पी लर्निंग",
-  "resources_for_this": "Resources for this lesson has unlocked."
+  "resources_for_this": "Resources for this lesson has unlocked.",
+
+  "ok": "ठीक है",
+  "total_xp_available": "कुल XP उपलब्ध",
+  "subjects": "विषयों",
+  "notifications": "सूचनाएं",
+  "frequently_asked_questions": "अक्सर पूछे जाने वाले प्रश्नों",
+  "no_students_found": "कोई छात्र नहीं मिला",
+  "these_scores_are_not_academic_rankings": "ये स्कोर अकादमिक रैंकिंग नहीं हैं",
+  "points": "अंक",
+  "error_loading_leader_board": "लीडर बोर्ड लोड करने में त्रुटि",
+  "name": "नाम",
+  "choose_an_avatar": "एक अवतार चुनें",
+  "free_avatars": "मुफ़्त अवतार",
+  "redeem_avatars": "अवतारों को छुड़ाओ",
+  "free": "मुक्त",
+  "paid": "चुकाया गया",
+  "avatars_available": "अवतार उपलब्ध हैं",
+  "not_enough_balance": "पर्याप्त संतुलन नहीं",
+  "are_you_sure_you_want_to_spend": "क्या आप वाकई खर्च करना चाहते हैं?",
+  "xp_to_unlock_this_avatar": "XP इस अवतार को अनलॉक करने के लिए?",
+  "error_load_failed": "त्रुटि: लोड विफल रहा",
+  "apply": "आवेदन करना",
+  "edit_profile": "प्रोफ़ाइल संपादित करें",
+  "change_avatar": "परिवर्तन अवतार",
+  "gender": "लिंग",
+  "male": "पुरुष",
+  "female": "महिला",
+  "update_password": "पासवर्ड अपडेट करें",
+  "profile": "प्रोफ़ाइल",
+  "earned_xp": "अर्जित एक्सपी",
+  "clarified_stats": "स्पष्ट आँकड़े",
+  "total_spent_xp": "कुल व्यय XP",
+  "quiz_attemped": "प्रश्नोत्तरी प्रयास",
+  "error_loading_profile": "प्रोफ़ाइल लोड करने में त्रुटि",
+  "unknown_teacher": "अज्ञात शिक्षक",
+  "confirmation": "पुष्टीकरण",
+  "cancel_capital": "रद्द करना",
+  "yes_unlock": "हाँ, अनलॉक करें",
+  "case_study": "मामले का अध्ययन",
+  "case_study_second": "मामले का अध्ययन",
+  "recent_topics": "हाल के विषय",
+  "no_topics_completed_yet": "अभी तक कोई विषय पूरा नहीं हुआ",
+  "xp": "एक्सपी",
+  "quick_feedback": "त्वरित प्रतिक्रिया",
+  "select_difficulty_level": "कठिनाई स्तर का चयन करें",
+  "easy": "आसान",
+  "medium": "मध्यम",
+  "hard": "मुश्किल",
+  "complete_and_get": "पूरा करो और पाओ",
+  "quiz_goals": "प्रश्नोत्तरी लक्ष्य:",
+  "we_value_your_input": "हम आपके इनपुट को महत्व देते हैं और आपके सीखने के अनुभव को बढ़ाने का प्रयास करते हैं। इस सर्वेक्षण का उद्देश्य हाल ही में पूर्ण हुए पाठ पर प्रश्नोत्तरी एकत्र करना है। आपकी प्रतिक्रियाएँ हमें समझने में मदद करेंगी।",
+  "study_material": "अध्ययन सामग्री",
+  "videos": "वीडियो",
+  "ncert_solutions": "एनसीईआरटी समाधान",
+  "revision": "दोहराव",
+  "templates": "टेम्पलेट्स",
+  "more_content_coming_soon": "अधिक सामग्री जल्द ही आ रही है",
+  "go_back": "वापस जाओ",
+  "not_loaded": "लोड नहीं",
+  "teacher_name": "शिक्षक का नाम:",
+  "lesson_plan": "शिक्षण योजना",
+  "xp_to_unlock_this": "इसे अनलॉक करने के लिए XP",
+  "start_quiz": "प्रश्नोत्तरी प्रारंभ करें",
+  "use": "उपयोग",
+  "recently_completed_topics": "हाल ही में पूर्ण किये गये विषय",
+  "there_are_no_new_topics_available": "कोई नया विषय उपलब्ध नहीं है",
+  "there_was_an_error": "एक त्रुटि हुई",
+  "no_available_subjects": "कोई उपलब्ध विषय नहीं",
+  "error_loading": "लोड होने मे त्रुटि",
+  "see_description": "विवरण देखे",
+  "congratulation": "बधाई हो!",
+  "you_earned": "आपने अर्जित",
+  "theres_no_time_limit_respond_at_your_own_pace": "कोई समय सीमा नहीं है, अपनी गति से उत्तर दें!",
+  "select_your_option": "अपना विकल्प चुनें:",
+  "page_not_found": "पृष्ठ नहीं मिला",
+  "loading": "लोड हो रहा है",
+  "already_completed": "पहले से पूरा है",
+  "start_survey": "सर्वेक्षण शुरू करें",
+  "your_section": "आपका अनुभाग",
+  "section": "अनुभाग",
+  "section_all": "अनुभाग-सभी",
+  "all_section": "सभी अनुभाग",
+  "you_capital": "आप",
+  "already_submitted": "पहले से ही प्रस्तुत",
+  "playing_quiz": "प्रश्नोत्तरी बजाना",
+  "total_question": "कुल प्रश्न: ",
+  "answered": "उत्तर दिया गया: ",
+  "remaining": "शेष: ",
+  "question": "सवाल: ",
+  "correct_Answer": "सही जवाब : ",
+  "explanation": "स्पष्टीकरण : ",
+  "lesson_quiz_complete": "पाठ प्रश्नोत्तरी पूर्ण!",
+  "you_are_doing_great": "आप बहुत अच्छा कर रहे हैं।",
+  "time": "समय",
+  "perfect": "उत्तम",
+  "locked": "बंद",
+  "unlocked": "अनलॉक केले",
+  "unknown": "अज्ञात"
 }
