--- a/lib/l10n/app_mr.arb
+++ b/lib/l10n/app_mr.arb
@@ -128,5 +128,103 @@
   "failed_to_previous": "मागील उत्तरांमध्ये अयशस्वी",
   "good_job": "चांगली नोकरी!",
   "happy_learning" : "आनंदी शिक्षण",
-  "resources_for_this": "Resources for this lesson has unlocked."
+  "resources_for_this": "Resources for this lesson has unlocked.",
+
+  "ok": "ठीक आहे",
+  "total_xp_available": "एकूण XP उपलब्ध",
+  "subjects": "विषय",
+  "notifications": "अधिसूचना",
+  "frequently_asked_questions": "सतत विचारले जाणारे प्रश्न",
+  "no_students_found": "कोणतेही विद्यार्थी आढळले नाहीत",
+  "these_scores_are_not_academic_rankings": "हे गुण शैक्षणिक रँकिंग नाहीत",
+  "points": "गुण",
+  "error_loading_leader_board": "लीडर बोर्ड लोड करताना त्रुटी",
+  "name": "नाव",
+  "choose_an_avatar": "एक अवतार निवडा",
+  "free_avatars": "मुक्त अवतार",
+  "redeem_avatars": "अवतारांची पूर्तता करा",
+  "free": "फुकट",
+  "paid": "दिले",
+  "avatars_available": "अवतार उपलब्ध",
+  "not_enough_balance": "पुरेसा शिल्लक नाही",
+  "are_you_sure_you_want_to_spend": "तुमची खात्री आहे की तुम्ही खर्च करू इच्छिता",
+  "xp_to_unlock_this_avatar": "हा अवतार अनलॉक करण्यासाठी xp?",
+  "error_load_failed": "त्रुटी: लोड अयशस्वी",
+  "apply": "अर्ज करा",
+  "edit_profile": "प्रोफाईल संपादित करा",
+  "change_avatar": "अवतार बदला",
+  "gender": "लिंग",
+  "male": "पुरुष",
+  "female": "स्त्री",
+  "update_password": "पासवर्ड अपडेट करा",
+  "profile": "प्रोफाइल",
+  "earned_xp": "कमावले XP",
+  "clarified_stats": "स्पष्ट आकडेवारी",
+  "total_spent_xp": "एकूण खर्च XP",
+  "quiz_attemped": "प्रश्नोत्तराचा प्रयत्न",
+  "error_loading_profile": "प्रोफाइल लोड करताना त्रुटी",
+  "unknown_teacher": "अज्ञात शिक्षक",
+  "confirmation": "पुष्टी",
+  "cancel_capital": "रद्द करा",
+  "yes_unlock": "होय, अनलॉक करा",
+  "case_study": "केस स्टडी",
+  "case_study_second": "केस स्टडी",
+  "recent_topics": "अलीकडील विषय",
+  "no_topics_completed_yet": "अद्याप कोणतेही विषय पूर्ण झाले नाहीत",
+  "xp": "XP",
+  "quick_feedback": "जलद अभिप्राय",
+  "select_difficulty_level": "अडचण पातळी निवडा",
+  "easy": "सोपे",
+  "medium": "मध्यम",
+  "hard": "कठिण",
+  "complete_and_get": "पूर्ण करा आणि मिळवा",
+  "quiz_goals": "क्विझ गोल:",
+  "we_value_your_input": "आम्ही तुमच्या इनपुटची कदर करतो आणि तुमचा शिकण्याचा अनुभव वाढवण्याचा प्रयत्न करतो. नुकत्याच पूर्ण झालेल्या धड्यावर प्रश्नमंजुषा गोळा करणे हा या सर्वेक्षणाचा उद्देश आहे. तुमचे प्रतिसाद आम्हाला समजण्यास मदत करतील.",
+  "study_material": "अभ्यास साहित्य",
+  "videos": "व्हिडिओ",
+  "ncert_solutions": "NCERT उपाय",
+  "revision": "उजळणी",
+  "templates": "टेम्पलेट्स",
+  "more_content_coming_soon": "अधिक सामग्री लवकरच येत आहे",
+  "go_back": "परत जा",
+  "not_loaded": "लोड केलेले नाही",
+  "teacher_name": "शिक्षकाचे नाव:",
+  "lesson_plan": "पाठ योजना",
+  "xp_to_unlock_this": "हे अनलॉक करण्यासाठी XP",
+  "start_quiz": "क्विझ सुरू करा",
+  "use": "वापरा",
+  "recently_completed_topics": "नुकतेच पूर्ण झालेले विषय",
+  "there_are_no_new_topics_available": "कोणतेही नवीन विषय उपलब्ध नाहीत",
+  "there_was_an_error": "एक त्रुटी आली",
+  "no_available_subjects": "कोणतेही उपलब्ध विषय नाहीत",
+  "error_loading": "त्रुटी: लोड होत आहे",
+  "see_description": "वर्णन पहा",
+  "congratulation": "अभिनंदन!",
+  "you_earned": "तुम्ही कमावले",
+  "theres_no_time_limit_respond_at_your_own_pace": "कोणतीही वेळ मर्यादा नाही, आपल्या स्वत: च्या गतीने प्रतिसाद द्या!",
+  "select_your_option": "तुमचा पर्याय निवडा:",
+  "page_not_found": "पृष्ठ सापडले नाही",
+  "loading": "लोड होत आहे",
+  "already_completed": "आधीच पूर्ण",
+  "start_survey": "सर्वेक्षण सुरू करा",
+  "your_section": "तुमचा विभाग",
+  "section": "विभाग",
+  "section_all": "विभाग-सर्व",
+  "all_section": "सर्व विभाग",
+  "you_capital": "आपण",
+  "already_submitted": "आधीच सबमिट केले आहे",
+  "playing_quiz": "क्विझ खेळत आहे",
+  "total_question": "एकूण प्रश्न: ",
+  "answered": "उत्तर दिले: ",
+  "remaining": "उर्वरित: ",
+  "question": "प्रश्न: ",
+  "correct_Answer": "बरोबर उत्तर: ",
+  "explanation": "स्पष्टीकरण: ",
+  "lesson_quiz_complete": "धडा क्विझ पूर्ण!",
+  "you_are_doing_great": "तुम्ही छान करत आहात.",
+  "time": "वेळ",
+  "perfect": "परफेक्ट",
+  "locked": "कुलूपबंद",
+  "unlocked": "अनलॉक केले",
+  "unknown": "अज्ञात"
 }
