--- a/lib/l10n/app_mr.arb
+++ b/lib/l10n/app_mr.arb
@@ -114,7 +114,7 @@
   "open": "उघडा",
   "post_lesson_doubt": "धडा नंतर शंका",
 
-  "student_id": "विद्यार्थी ओळखपत्र",
+  "student_id": "वापरकर्ता ओळखपत्र",
   "please_provide_id": "कृपया आयडी द्या",
   "password": "पासवर्ड",
   "please_password": "कृपया पासवर्ड द्या",
@@ -226,5 +226,7 @@
   "perfect": "परफेक्ट",
   "locked": "कुलूपबंद",
   "unlocked": "अनलॉक केले",
-  "unknown": "अज्ञात"
+  "unknown": "अज्ञात",
+  "parents_feedback_message":"तुमचे इनपुट तुमच्या मुलाच्या कल्याणासाठी एक मौल्यवान पाऊल आहे.",
+  "contact_help":"मदतीसाठी आमच्याशी संपर्क साधा"
 }
