push notification added

--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -229,6 +229,10 @@
   "unknown": "अज्ञात",
   "parents_feedback_message":"आपका इनपुट आपके बच्चे की भलाई की दिशा में एक अनमोल कदम है।",
 
-  "contact_help":"सहायता के लिए हमसे संपर्क करें"
+  "contact_help":"सहायता के लिए हमसे संपर्क करें",
+   "community_post_1":"1. स्कूल की गतिविधियों, घटनाओं, अनुभवों और रणनीतियों से संबंधित पोस्ट साझा करें।",
+  "community_post_2":"2. व्यक्तिगत चित्र या विषय से हटकर सामग्री पोस्ट करने से बचें।",
+  "community_post_3":"3. अपमानजनक भाषा सख्त वर्जित है।"
+
   
 }
