--- a/lib/l10n/app_mr.arb
+++ b/lib/l10n/app_mr.arb
@@ -228,5 +228,8 @@
   "unlocked": "अनलॉक केले",
   "unknown": "अज्ञात",
   "parents_feedback_message":"तुमचे इनपुट तुमच्या मुलाच्या कल्याणासाठी एक मौल्यवान पाऊल आहे.",
-  "contact_help":"मदतीसाठी आमच्याशी संपर्क साधा"
+  "contact_help":"मदतीसाठी आमच्याशी संपर्क साधा",
+     "community_post_1":"1. शालेय उपक्रम, कार्यक्रम, अनुभव आणि धोरणांशी संबंधित पोस्ट शेअर करा.",
+  "community_post_2":"2. वैयक्तिक प्रतिमा किंवा विषयाबाहेरील सामग्री पोस्ट करणे टाळा.",
+  "community_post_3":"3. अपमानास्पद भाषा कठोरपणे प्रतिबंधित आहे."
 }
