--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -227,6 +227,9 @@
   "locked": "Locked",
   "unlocked": "Unlocked",
   "unknown": "Unknown",
-  "contact_help":"Contact us for help"
+  "contact_help":"Contact us for help",
+  "community_post_1":"1. Share posts related to school activities, events, experiences, and strategies.",
+  "community_post_2":"2. Refrain from posting personal images or off-topic content.",
+  "community_post_3":"3. Derogatory language is strictly prohibited."
 
 }
