dynamic language added for playbook, dashboard, and survey

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -230,6 +230,8 @@
   "contact_help":"Contact us for help",
   "community_post_1":"1. Share posts related to school activities, events, experiences, and strategies.",
   "community_post_2":"2. Refrain from posting personal images or off-topic content.",
-  "community_post_3":"3. Derogatory language is strictly prohibited."
-
+  "community_post_3":"3. Derogatory language is strictly prohibited.",
+  "why_this_work":"Why this work",
+  "read_detail":"Read details",
+  "no_dashboard":"No Dashboards"
 }
