--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -232,7 +232,10 @@
   "contact_help":"सहायता के लिए हमसे संपर्क करें",
    "community_post_1":"1. स्कूल की गतिविधियों, घटनाओं, अनुभवों और रणनीतियों से संबंधित पोस्ट साझा करें।",
   "community_post_2":"2. व्यक्तिगत चित्र या विषय से हटकर सामग्री पोस्ट करने से बचें।",
-  "community_post_3":"3. अपमानजनक भाषा सख्त वर्जित है।"
+  "community_post_3":"3. अपमानजनक भाषा सख्त वर्जित है।",
+  "why_this_work":"यह काम क्यों?",
+  "read_detail":"विस्तार से पढ़ें",
+   "no_dashboard":"कोई डैशबोर्ड नहीं"
 
   
 }
