--- a/lib/l10n/app_mr.arb
+++ b/lib/l10n/app_mr.arb
@@ -231,5 +231,8 @@
   "contact_help":"मदतीसाठी आमच्याशी संपर्क साधा",
      "community_post_1":"1. शालेय उपक्रम, कार्यक्रम, अनुभव आणि धोरणांशी संबंधित पोस्ट शेअर करा.",
   "community_post_2":"2. वैयक्तिक प्रतिमा किंवा विषयाबाहेरील सामग्री पोस्ट करणे टाळा.",
-  "community_post_3":"3. अपमानास्पद भाषा कठोरपणे प्रतिबंधित आहे."
+  "community_post_3":"3. अपमानास्पद भाषा कठोरपणे प्रतिबंधित आहे.",
+  "why_this_work":"हे काम का",
+  "read_detail":"तपशील वाचा",
+  "no_dashboard":"कोणतेही डॅशबोर्ड नाहीत"
 }
