--- a/lib/l10n/app_mr.arb
+++ b/lib/l10n/app_mr.arb
@@ -234,5 +234,12 @@
   "community_post_3":"3. अपमानास्पद भाषा कठोरपणे प्रतिबंधित आहे.",
   "why_this_work":"हे काम का",
   "read_detail":"तपशील वाचा",
-  "no_dashboard":"कोणतेही डॅशबोर्ड नाहीत"
+  "no_dashboard":"कोणतेही डॅशबोर्ड नाहीत",
+  
+  "activities_applied_msg":"रणनीती यशस्वीरित्या जोडली गेली आहे. \n तुम्ही ते तुमच्या कॅलेंडरमध्ये शोधू शकता.",
+  "remender_and_notes": "स्मरणपत्र आणि टिपा",
+  "lesson_plan":"धडा योजना",
+  "assignment":"असाईनमेंट",
+  "my_activity":"माझे उपक्रम",
+  "no_result_found":"कोणतेही परिणाम आढळले नाहीत"
 }
