--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -235,7 +235,11 @@
   "community_post_3":"3. अपमानजनक भाषा सख्त वर्जित है।",
   "why_this_work":"यह काम क्यों?",
   "read_detail":"विस्तार से पढ़ें",
-   "no_dashboard":"कोई डैशबोर्ड नहीं"
-
-  
+   "no_dashboard":"कोई डैशबोर्ड नहीं",
+  "activities_applied_msg":"रणनीति सफलतापूर्वक जुड़ गई है। \n आप इसे अपने कैलेंडर में पा सकते हैं।",
+    "remender_and_notes": "अनुस्मारक और नोट्स",
+  "lesson_plan":"पाठ योजना",
+  "assignment":"असाइनमेंट",
+  "my_activity":"मेरी गतिविधियाँ",
+  "no_result_found":"कोई परिणाम नहीं मिला"
 }
